Closed
Bug 444375
Opened 17 years ago
Closed 17 years ago
Table cells not wrapping on web page
Categories
(Core :: Layout: Tables, defect, P1)
Core
Layout: Tables
Tracking
()
VERIFIED
FIXED
mozilla1.9.1b3
People
(Reporter: kevin.goertz, Assigned: roc)
References
()
Details
(Keywords: regression, testcase, verified1.9.1)
Attachments
(2 files)
|
486 bytes,
text/html
|
Details | |
|
5.69 KB,
patch
|
smontagu
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9) Gecko/2008052906 Firefox/3.0
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9) Gecko/2008052906 Firefox/3.0
Table cells on this web page wrap correctly on all other browsers including all other versions of Firefox.
Reproducible: Always
Steps to Reproduce:
1.open web page
2.
3.
Actual Results:
Open web page http://profiler.noaa.gov/npn/npnWindViewer.jsp
Expected Results:
Profiler icons will be in one long string or accasionally wrap the last two.
In all other browsers including all other Firefox versions the table wraps to the minimized size or full screen size of browser.
Comment 1•17 years ago
|
||
Regression range is http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=1196673660&maxdate=1196674679
-> Bug 368554.
Blocks: 368554
Component: File Handling → Layout: Tables
Keywords: regression
Product: Firefox → Core
QA Contact: file.handling → layout.tables
Version: unspecified → Trunk
Comment 2•17 years ago
|
||
There has been some improvement over time; when I change my font to Verdana, it wraps.
Comment 3•17 years ago
|
||
Comment 4•17 years ago
|
||
Between every <span> and <img>, there is a tab character.
And for some reason, the font-family: arial needs to be set on the span (not on the body for example), in order for the bug to occur.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: wanted1.9.1?
Flags: wanted1.9.0.x?
Flags: blocking1.9.1?
Flags: blocking1.9.0.2?
Keywords: testcase
Comment 5•17 years ago
|
||
Not blocking but definitely wanted and should probably block 1.9.1. Roc, who can own this?
Flags: wanted1.9.0.x?
Flags: wanted1.9.0.x+
Flags: blocking1.9.0.3?
Flags: blocking1.9.0.2?
Flags: blocking1.9.0.2-
| Assignee | ||
Updated•17 years ago
|
Flags: wanted1.9.1?
Flags: wanted1.9.1+
Flags: blocking1.9.1?
Comment 7•17 years ago
|
||
Not blocking, but we'd take a patch after it lands on trunk.
Flags: blocking1.9.0.4?
Comment 8•17 years ago
|
||
The tabs don't seem to be relevant; I get the same behavior with spaces instead.
The font style probably matters because it breaks up the text into one textrun per span.
Comment 9•17 years ago
|
||
And it looks like we're not allowing wrapping on that whitespace at the beginning of the textrun for some reason... Something to do with being followed by a replaced element?
In any case, I think we should fix this for 1.9.1.
Flags: blocking1.9.1?
Comment 10•17 years ago
|
||
Is this bug the same root cause explaining why long lines in patches no longer wrap in diff mode? One example is https://bugzilla.mozilla.org/attachment.cgi?id=335648&action=diff#mozilla/webtools/bugzilla/t/007util.t_sec1
| Assignee | ||
Updated•17 years ago
|
Flags: wanted1.9.1+
Flags: blocking1.9.1?
Flags: blocking1.9.1+
Priority: -- → P1
| Assignee | ||
Comment 11•17 years ago
|
||
This fix was somewhat easier than I feared. When calculating the min-width for the space inside the <span>, we need to allow the code to reach the part where we check for TEXT_HAS_TRAILING_BREAK even when start == flowEndInTextRun. (For the space inside the <span>, start == flowEndInTextRun because the space was collapsed away to nothing.)
The change in AddInlinePrefWidthForFlow is not strictly necessary --- in that method, nothing interesting can happen in the loop over i when start == flowEndInTextRun --- but I'm trying to keep that method in sync with AddInlineMinWidthForFlow.
Attachment #348705 -
Flags: review?(smontagu)
| Assignee | ||
Updated•17 years ago
|
Whiteboard: [needs review]
Updated•17 years ago
|
Attachment #348705 -
Flags: review?(smontagu) → review+
| Assignee | ||
Updated•17 years ago
|
Whiteboard: [needs review] → [needs landing]
Comment 12•17 years ago
|
||
So, this is marked blocking1.9.1+ and a P1. Since it's also not targeted at b2 milestone, I want to make sure we're intentionally saying that we do *not* need a beta for this.
So, does this require a beta vector?
| Assignee | ||
Comment 13•17 years ago
|
||
I don't think so.
Landed on mozilla-central (and thus also on mozilla-1.9.1):
http://hg.mozilla.org/mozilla-central/rev/59950d816bf5
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Whiteboard: [needs landing]
Target Milestone: --- → mozilla1.9.1b3
| Assignee | ||
Updated•17 years ago
|
Flags: in-testsuite+
Updated•17 years ago
|
Keywords: fixed1.9.1
Comment 15•17 years ago
|
||
Verified with:
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1b3pre) Gecko/20081213 Shiretoko/3.1b3pre ID:20081213034757
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.2a1pre) Gecko/20081213 Minefield/3.2a1pre
Status: RESOLVED → VERIFIED
Keywords: fixed1.9.1 → verified1.9.1
OS: Windows XP → All
Hardware: PC → All
Target Milestone: mozilla1.9.1b3 → mozilla1.9.2a1
Updated•17 years ago
|
Target Milestone: mozilla1.9.2a1 → mozilla1.9.1b3
You need to log in
before you can comment on or make changes to this bug.
Description
•