Bug 444375. Take TEXT_HAS_TRAILING_BREAK into account when computing min-width for text which has entirely collapsed away. r=smontagu